# nexal

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  KEEP-RUST.md  LICENSE  README.md  agent_core.py  docker-compose.yml  drizzle.config.ts  justfile  main.py  package.json  pyproject.toml  sandbox.Dockerfile
agent/: Cargo.toml
agent/src/: actor.rs  bot.rs  context.rs  db_proxy.rs  lib.rs  orchestrator.rs  podman.rs  pool.rs  runner.rs  skills.rs
agent/tests/: state_machine_test.rs
channel-cron/: Cargo.toml
channel-heartbeat/: Cargo.toml
channel-http/: Cargo.toml
channel-http/src/: lib.rs
crates/agent/: Cargo.toml
crates/agent/src/: actor.rs  agent.rs  db_proxy.rs  db_sync.rs  lib.rs  pool.rs  proxy.rs  runner.rs  signal.rs  skills.rs
crates/agent/tests/: signal_test.rs
crates/app-server/: Cargo.toml
crates/app-server-client/: Cargo.toml  README.md
crates/app-server-client/src/: lib.rs  remote.rs
crates/app-server-protocol/: Cargo.toml
crates/app-server-protocol/schema/json/: ApplyPatchApprovalParams.json  ExecCommandApprovalParams.json  FuzzyFileSearchResponse.json  ServerRequest.json  codex_app_server_protocol.schemas.json
crates/app-server-protocol/src/: export.rs  jsonrpc_lite.rs  lib.rs  schema_fixtures.rs
crates/app-server-protocol/src/protocol/: common.rs  thread_history.rs  v1.rs  v2.rs
crates/app-server-test-client/: Cargo.toml
crates/app-server-test-client/src/: lib.rs  main.rs
crates/app-server/src/: app_server_tracing.rs  command_exec.rs  config_api.rs  dynamic_tools.rs  filters.rs  fs_api.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  message_processor.rs  models.rs  nexal_message_processor.rs  outgoing_message.rs  server_request_error.rs  thread_status.rs  transport.rs
crates/app-server/src/message_processor/: tracing_tests.rs
crates/app-server/src/nexal_message_processor/: apps_list_helpers.rs  plugin_app_helpers.rs
crates/app-server/tests/common/: Cargo.toml  auth_fixtures.rs  config.rs  lib.rs  mcp_process.rs  models_cache.rs
crates/app-server/tests/suite/: auth.rs  conversation_summary.rs
crates/backend-client/: Cargo.toml
crates/backend-client/src/: types.rs
crates/channel-core/: Cargo.toml
crates/channel-core/src/: channel.rs  debounce.rs  lib.rs  serde_utils.rs
crates/channel-cron/: Cargo.toml
crates/channel-cron/src/: config.rs  lib.rs
crates/channel-discord/: Cargo.toml
crates/channel-discord/src/: config.rs  lib.rs
crates/channel-http/: Cargo.toml
crates/channel-http/src/: config.rs  lib.rs
crates/channel-http/tests/: response_socket_test.rs
crates/channel-telegram/: Cargo.toml
crates/channel-telegram/src/: config.rs  lib.rs
crates/chatgpt/: Cargo.toml  README.md
crates/chatgpt/src/: apply_command.rs  connectors.rs  get_task.rs
crates/cloud-tasks-client/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: config_requirements.rs  diagnostics.rs  fingerprint.rs  requirements_exec_policy.rs  skills_config.rs  state.rs
crates/core/: Cargo.toml  gpt-5.1-codex-max_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  models.json  prompt_with_apply_patch_instructions.md
crates/core-skills/: Cargo.toml
crates/core-skills/src/: config_rules.rs  injection.rs  injection_tests.rs  invocation_utils.rs  invocation_utils_tests.rs  lib.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  model.rs  remote.rs  render.rs
crates/core/src/: api_bridge.rs  apply_patch.rs  arc_monitor.rs  arc_monitor_tests.rs  auth_env_telemetry.rs  client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  command_canonicalization.rs  command_canonicalization_tests.rs  commit_attribution.rs  commit_attribution_tests.rs  compact.rs  compact_remote.rs  compact_tests.rs  connectors.rs  connectors_tests.rs  contextual_user_message.rs  contextual_user_message_tests.rs  custom_prompts.rs  environment_context.rs  error.rs  error_tests.rs  event_mapping.rs  exec.rs  exec_env.rs  exec_env_tests.rs  exec_policy.rs  exec_policy_tests.rs  exec_tests.rs  external_agent_config.rs  external_agent_config_tests.rs  file_watcher.rs  flags.rs  function_tool.rs  git_info_tests.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  (+58 more)
crates/core/src/agent/: agent_resolver.rs  control.rs  control_tests.rs  registry.rs  registry_tests.rs  role.rs  role_tests.rs
crates/core/src/config/: config_tests.rs  edit.rs  edit_tests.rs  managed_features.rs  mod.rs  network_proxy_spec.rs  permissions.rs  profile.rs  schema.rs  service.rs  service_tests.rs  types.rs
crates/core/src/config_loader/: layer_io.rs  mod.rs  tests.rs
crates/core/src/context_manager/: history.rs  history_tests.rs  mod.rs  normalize.rs  updates.rs
crates/core/src/guardian/: approval_request.rs  mod.rs  prompt.rs  review_session.rs  tests.rs
crates/core/src/instructions/: mod.rs
crates/core/src/mcp/: auth.rs  mod.rs  skill_dependencies.rs
crates/core/src/memories/: README.md  citations.rs  mod.rs  phase1.rs  phase2.rs  prompts.rs  storage.rs  storage_tests.rs  tests.rs
crates/core/src/models_manager/: cache.rs  collaboration_mode_presets.rs  manager.rs  manager_tests.rs  model_info.rs  model_presets.rs
crates/core/tests/: responses_headers.rs
crates/exec/: Cargo.toml
crates/exec-server/: Cargo.toml  README.md
crates/exec-server/src/: client.rs  connection.rs  environment.rs  lib.rs  local_file_system.rs  local_process.rs  protocol.rs  proxy.rs  rpc.rs
crates/exec-server/tests/: initialize.rs  websocket.rs
crates/exec/src/: event_processor.rs  exec_events.rs  main.rs
crates/features/: Cargo.toml
crates/features/src/: legacy.rs  lib.rs  tests.rs
crates/feedback/: Cargo.toml
crates/feedback/src/: lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: legacy_notify.rs  lib.rs  registry.rs
crates/instructions/: Cargo.toml
crates/instructions/src/: lib.rs  user_instructions.rs
crates/keyring-store/: Cargo.toml
crates/linux-sandbox/: Cargo.toml  README.md
crates/linux-sandbox/src/: bwrap.rs  landlock.rs  lib.rs  linux_run_main.rs  proxy_routing.rs
(+1434 files in other folders)
