[workspace]
members = [
    "crates/nexal-agent",
    "crates/nexal-gateway",
    "crates/utils/absolute-path",
    "crates/utils/cargo-bin",
    "crates/utils/pty",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# ── Internal ──
nexal-agent = { path = "crates/nexal-agent" }
nexal-gateway = { path = "crates/nexal-gateway" }
nexal-utils-absolute-path = { path = "crates/utils/absolute-path" }
nexal-utils-cargo-bin = { path = "crates/utils/cargo-bin" }
nexal-utils-pty = { path = "crates/utils/pty" }

# ── External ──
anyhow = "1"
arc-swap = "1.9.0"
assert_cmd = "2"
async-trait = "0.1.89"
base64 = "0.22.1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
futures = { version = "0.3", default-features = false }
libc = "0.2.182"
path-absolutize = "3.1.1"
portable-pty = "0.9.0"
pretty_assertions = "1.4.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
axum = { version = "0.7" }
http = "1"
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints]
rust = {}

[workspace.lints.clippy]
unwrap_used = "deny"


[profile.release]
lto = "thin"
split-debuginfo = "off"
strip = "symbols"
codegen-units = 1
panic = "abort"

