[project]
name = "deepresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentfs-sdk>=0.6.2",
    "html-to-markdown>=2.28.1",
    "httpx>=0.28.1",
    "openai>=2.26.0",
    "podman>=5.7.0",
    "pytest>=8.4.0",
]

[project.scripts]
deepresearch = "deepresearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a working local Podman environment",
]
