[project]
name = "nexal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentfs-sdk>=0.6.2",
    "aiogram>=3.26.0",
    "datasets>=4.6.1",
    "discord>=2.3.2",
    "html-to-markdown>=2.28.1",
    "httpx>=0.28.1",
    "litellm>=1.67.0",
    "podman>=5.7.0",
    "pytest>=8.4.0",
    "uuid6>=2025.0.1",
]

[project.optional-dependencies]
telegram = ["aiogram>=3.15"]
discord = ["py-cord>=2.6"]
bots = ["aiogram>=3.15", "py-cord>=2.6"]

[project.scripts]
nexal = "nexal.cli:main"
nexal-bot = "nexal.bots.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a working local Podman environment",
]
