[project]
name = "nexal"
version = "0.1.0"
description = "A minimal AI agent framework with sandboxed tool execution"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "agent", "llm", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "agentfs-sdk>=0.6.2",
    "html-to-markdown>=2.28.1",
    "httpx>=0.28.1",
    "litellm>=1.67.0",
    "prompt-toolkit>=3.0.50",
    "podman>=5.7.0",
    "uuid6>=2025.0.1",
]

[project.optional-dependencies]
telegram = ["aiogram>=3.15"]
discord = ["py-cord>=2.6"]
bots = ["aiogram>=3.15", "py-cord>=2.6"]
dev = ["pytest>=8.4.0", "datasets>=4.6.1"]

[project.scripts]
nexal = "nexal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexal"]

[tool.hatch.build]
artifacts = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a working local Podman environment",
]
