[package]
name = "nexal-channel-http"
version.workspace = true
edition.workspace = true

[dependencies]
nexal-config = { workspace = true }
nexal-channel-core = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["json", "query", "tokio", "http1"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
