[package]
name = "nexal-agent"
version.workspace = true
edition.workspace = true

[dependencies]
nexal-config = { workspace = true }
nexal-state = { workspace = true }
nexal-channel-core = { workspace = true }

nexal-app-server-client = { workspace = true }
nexal-app-server-protocol = { workspace = true }
nexal-arg0 = { workspace = true }
nexal-core = { workspace = true }
nexal-exec-server = { workspace = true }
nexal-protocol = { workspace = true }
nexal-config-loader = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true, features = ["json", "http1", "tokio"] }
base64 = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
image = { workspace = true }
serde_yaml = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
doctest = false
