[package]
name = "nexal-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nexal_app_server_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
nexal-app-server = { workspace = true }
nexal-app-server-protocol = { workspace = true }
nexal-arg0 = { workspace = true }
nexal-core = { workspace = true }
nexal-exec-server = { workspace = true }
nexal-feedback = { workspace = true }
nexal-protocol = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
