[package]
name = "nexal-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nexal-app-server"
path = "src/main.rs"

[[bin]]
name = "nexal-app-server-test-notify-capture"
path = "src/bin/notify_capture.rs"

[lib]
name = "nexal_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
nexal-arg0 = { workspace = true }
nexal-core = { workspace = true }
nexal-exec-server = { workspace = true }
nexal-features = { workspace = true }
nexal-git-utils = { workspace = true }
nexal-shell-command = { workspace = true }
nexal-utils-cli = { workspace = true }
nexal-utils-pty = { workspace = true }
nexal-file-search = { workspace = true }
nexal-login = { workspace = true }
nexal-protocol = { workspace = true }
nexal-app-server-protocol = { workspace = true }
nexal-feedback = { workspace = true }
nexal-rmcp-client = { workspace = true }
nexal-sandboxing = { workspace = true }
nexal-rollout-state = { workspace = true }
nexal-utils-absolute-path = { workspace = true }
nexal-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
constant_time_eq = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
jsonwebtoken = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
core_test_support = { workspace = true }
nexal-utils-cargo-bin = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rmcp = { workspace = true, default-features = false, features = [
    "elicitation",
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing-opentelemetry = { workspace = true }
wiremock = { workspace = true }
shlex = { workspace = true }
