[package]
name = "nexal-channel-http"
version.workspace = true
edition.workspace = true

[dependencies]
nexal-config = { workspace = true }
nexal-channel-core = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["json", "query", "tokio", "http1"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
test = false
doctest = false
