[package]
name = "nexal-channel-telegram"
version.workspace = true
edition.workspace = true

[dependencies]
nexal-config = { workspace = true }
nexal-channel-core = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
teloxide = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lib]
test = false
doctest = false
