[package]
name = "nexal-cloud-tasks-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nexal_cloud_tasks_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.17"
