[package]
edition.workspace = true
license.workspace = true
name = "nexal-core"
version.workspace = true

[lib]
doctest = false
name = "nexal_core"
path = "src/lib.rs"

[[bin]]
name = "nexal-write-config-schema"
path = "src/bin/config_schema.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bm25 = { workspace = true }
chardetng = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
nexal-analytics = { workspace = true }
nexal-api = { workspace = true }
nexal-app-server-protocol = { workspace = true }
nexal-apply-patch = { workspace = true }
nexal-async-utils = { workspace = true }
nexal-code-mode = { workspace = true }
nexal-connectors = { workspace = true }
nexal-config-loader = { workspace = true }
nexal-core-skills = { workspace = true }
nexal-exec-server = { workspace = true }
nexal-features = { workspace = true }
nexal-login = { workspace = true }
nexal-shell-command = { workspace = true }
nexal-execpolicy = { workspace = true }
nexal-git-utils = { workspace = true }
nexal-hooks = { workspace = true }
nexal-instructions = { workspace = true }
nexal-network-proxy = { workspace = true }
nexal-otel = { workspace = true }
nexal-plugin = { workspace = true }
nexal-protocol = { workspace = true }
nexal-rollout = { workspace = true }
nexal-rmcp-client = { workspace = true }
nexal-sandboxing = { workspace = true }
nexal-rollout-state = { workspace = true }
nexal-terminal-detection = { workspace = true }
nexal-utils-absolute-path = { workspace = true }
nexal-utils-cache = { workspace = true }
nexal-utils-image = { workspace = true }
nexal-utils-home-dir = { workspace = true }
nexal-utils-output-truncation = { workspace = true }
nexal-utils-path = { workspace = true }
nexal-utils-plugins = { workspace = true }
nexal-utils-pty = { workspace = true }
nexal-utils-readiness = { workspace = true }
nexal-secrets = { workspace = true }
nexal-utils-string = { workspace = true }
nexal-utils-stream-parser = { workspace = true }
nexal-utils-template = { workspace = true }
nexal-windows-sandbox = { workspace = true }
csv = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
encoding_rs = { workspace = true }
env-flags = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
iana-time-zone = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
indexmap = { workspace = true }
libc = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
which = { workspace = true }
wildmatch = { workspace = true }
zip = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[target.'cfg(unix)'.dependencies]
nexal-shell-escalation = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
nexal-arg0 = { workspace = true }
nexal-otel = { workspace = true, features = [
    "disable-default-metrics-exporter",
] }
nexal-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
ctor = { workspace = true }
insta = { workspace = true }
maplit = { workspace = true }
opentelemetry = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
test-case = "3.3.1"
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
    "metrics",
] }
serial_test = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
walkdir = { workspace = true }
wiremock = { workspace = true }
zstd = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["openssl-sys"]
