[package]
name = "nexal-exec-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[[bin]]
name = "nexal-exec-server"
path = "src/bin/nexal-exec-server.rs"

[lints]
workspace = true

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
nexal-app-server-protocol = { workspace = true }
nexal-utils-absolute-path = { workspace = true }
nexal-utils-pty = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
nexal-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
test-case = "3.3.1"
